Squashed commit of the following:
commit 180225caa670255a02be55e22b8ea1650dc3c55c
Author: SDIDSA <zinou.teyar@gmail.com>
Date:   Sat Nov 9 06:58:40 2024 +0100

    clear git cache

commit 19405e29c4ec79028e92dee97fde1fb3eac5bd45
Author: SDIDSA <zinou.teyar@gmail.com>
Date:   Sat Nov 9 06:05:54 2024 +0100

    bug fixes and ui localization