@@ -15,6 +15,7 @@ import org.luke.gui.controls.label.keyed.Label;
 import org.luke.gui.controls.popup.Direction;
 import org.luke.gui.controls.popup.context.ContextMenu;
 import org.luke.gui.controls.popup.context.items.MenuItem;
+import org.luke.gui.controls.popup.tooltip.KeyedTooltip;
 import org.luke.gui.controls.popup.tooltip.TextTooltip;
 import org.luke.gui.controls.space.ExpandingHSpace;
 import org.luke.gui.controls.space.Separator;
@@ -34,16 +35,16 @@ import javafx.stage.DirectoryChooser;
 
 public abstract class LocalManagerSettings extends SettingsContent {
 
-	private VersionsDisplay managed;
-	private VersionsDisplay local;
+	private final VersionsDisplay managed;
+	private final VersionsDisplay local;
 
-	private Label defLab;
+	private final Label defLab;
 
-	private Settings settings;
+	private final Settings settings;
 
-	private ComboInput defCombo;
+	private final ComboInput defCombo;
 
-	private DirectoryChooser dc;
+	private final DirectoryChooser dc;
 
 	public LocalManagerSettings(Settings settings, String name) {
 		super(settings);
@@ -76,26 +77,23 @@ public abstract class LocalManagerSettings extends SettingsContent {
 
 		defCombo = new ComboInput(settings.getWindow(), new Font(14), "unset");
 
-		defCombo.valueProperty().addListener((obs, ov, nv) -> {
-			setDefaultVersion(nv);
-		});
+		defCombo.valueProperty().addListener((_, _, nv) -> setDefaultVersion(nv));
 
 		defCombo.setMinWidth(250);
 
-		defCombo.setCreator((m, k) -> createComboItem(m, k));
+		defCombo.setCreator(this::createComboItem);
 
 		HBox def = new HBox(defLab, new ExpandingHSpace(), defCombo);
 		def.setAlignment(Pos.CENTER_LEFT);
 
-		ColoredIcon addManaged = new ColoredIcon(settings.getWindow(), "add", 24, Style::getTextNormal);
-		addManaged.setAction(() -> {
-			addList.showPop(addManaged, Direction.DOWN_LEFT, 10);
-		});
+		ColoredIcon addManaged = new ColoredIcon(settings.getWindow(), "add", 24, Style::getTextMuted);
+		addManaged.setAction(() -> addList.showPop(addManaged, Direction.DOWN_LEFT, 10));
 		addManaged.setCursor(Cursor.HAND);
 
-		TextTooltip.install(addManaged, Direction.UP, "Add Version", 15, 15);
+		KeyedTooltip addVersion = new KeyedTooltip(settings.getWindow(), "add", Direction.UP, 15, 15);
+		TextTooltip.install(addManaged, addVersion);
 
-		ColoredIcon addLocal = new ColoredIcon(settings.getWindow(), "add", 24, Style::getTextNormal);
+		ColoredIcon addLocal = new ColoredIcon(settings.getWindow(), "add", 24, Style::getTextMuted);
 		addLocal.setAction(() -> {
 			File f = dc.showDialog(settings.getWindow());
 			if (f != null) {
@@ -105,7 +103,8 @@ public abstract class LocalManagerSettings extends SettingsContent {
 		});
 		addLocal.setCursor(Cursor.HAND);
 
-		TextTooltip.install(addLocal, Direction.UP, "Browse", 15, 15);
+		KeyedTooltip browse = new KeyedTooltip(settings.getWindow(), "browse", Direction.UP, 15, 15);
+		TextTooltip.install(addLocal, browse);
 
 		managed = new VersionsDisplay(settings.getWindow(), "managed_by_jwin", addManaged);
 
@@ -137,16 +136,13 @@ public abstract class LocalManagerSettings extends SettingsContent {
 
 		HashMap<String, Node> lines = new HashMap<>();
 
-		localInstalls().forEach(ver -> {
-			lines.put(ver.getVersion(), localUi(settings.getWindow(), ver, this::refreshLocal));
-		});
+		localInstalls().forEach(ver ->
+				lines.put(ver.getVersion(), localUi(settings.getWindow(), ver, this::refreshLocal)));
 
-		List<String> versions = lines.keySet().stream().collect(Collectors.toList());
+		List<String> versions = new ArrayList<>(lines.keySet());
 		versions.sort(comparator());
 
-		versions.forEach(v -> {
-			local.addLine(lines.get(v));
-		});
+		versions.forEach(v -> local.addLine(lines.get(v)));
 
 		refreshCombo();
 
@@ -168,12 +164,9 @@ public abstract class LocalManagerSettings extends SettingsContent {
 			lines.put(ver, job);
 		});
 
-		List<String> versions = lines.keySet().stream().collect(Collectors.toList());
-		versions.sort(comparator());
+		List<String> versions = lines.keySet().stream().sorted(comparator()).toList();
 
-		versions.forEach(v -> {
-			managed.addLine(lines.get(v));
-		});
+        versions.forEach(v -> managed.addLine(lines.get(v)));
 
 		refreshCombo();
 
@@ -184,16 +177,14 @@ public abstract class LocalManagerSettings extends SettingsContent {
 		defCombo.clearItems();
 
 		ArrayList<ComboItem> items = new ArrayList<>();
-		managedInstalls().forEach(f -> {
-			items.add(createComboItem(defCombo.getPopup(), f.getAbsolutePath()));
-		});
-		localInstalls().forEach(f -> {
-			items.add(createComboItem(defCombo.getPopup(), f.getRoot().getAbsolutePath()));
-		});
+		managedInstalls().forEach(f ->
+				items.add(createComboItem(defCombo.getPopup(), f.getAbsolutePath())));
+		localInstalls().forEach(f ->
+				items.add(createComboItem(defCombo.getPopup(), f.getRoot().getAbsolutePath())));
 
 		items.sort((p1, p2) -> comparator().compare(p1.getDisplay(), p2.getDisplay()));
 
-		defCombo.addItems(items.toArray(new ComboItem[items.size()]));
+		defCombo.addItems(items.toArray(new ComboItem[0]));
 
 		String defVer = getDefaultVersion();
 		if (isValid(defVer)) {
