@@ -4,6 +4,7 @@ import java.io.File;
 import java.util.ArrayList;
 import java.util.List;
 
+import org.luke.gui.exception.ErrorHandler;
 import org.luke.gui.window.Window;
 import org.luke.jwin.app.Command;
 
@@ -17,19 +18,17 @@ public class JdkParam extends JavaParam {
 		super(ps, "jdk_compile");
 
 		dc = new DirectoryChooser();
-		addButton(ps, "detect", () -> detect());
-		addButton(ps, "select", () -> browse());
+		addButton(ps, "detect", this::detect);
+		addButton(ps, "select", this::browse);
 	}
 
-	public File browse() {
+	public void browse() {
 		File dir = dc.showDialog(getWindow());
 		if (dir != null) {
 			if (isJdk(dir))
 				set(dir);
-			return dir;
 		}
 
-		return null;
 	}
 
 	public void detect() {
@@ -39,7 +38,7 @@ public class JdkParam extends JavaParam {
 			if (detected.isEmpty()) {
 				return;
 			}
-			File jdk = detected.get(0);
+			File jdk = detected.getFirst();
 
 			Platform.runLater(() -> {
 				if (jdk != null && jdk.exists()) {
@@ -64,12 +63,12 @@ public class JdkParam extends JavaParam {
 		ArrayList<File> res = new ArrayList<>();
 
 		ArrayList<String> sources = new ArrayList<>();
-		Command find = new Command(line -> sources.add(line), "cmd.exe", "/C", "dir /b /s javac.exe");
+		Command find = new Command(sources::add, "cmd.exe", "/C", "dir /b /s javac.exe");
 
 		try {
 			find.execute(new File("C:\\Program Files")).waitFor();
 		} catch (InterruptedException e) {
-			e.printStackTrace();
+			ErrorHandler.handle(e, "detect jdk installations");
 			Thread.currentThread().interrupt();
 		}
 
